2003-08-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-line.c, cong-editor-area-line.h, cong-editor-area-text-fragment.c, cong-editor-area-text-fragment.h, cong-editor-child-policy-inline.c, cong-editor-child-policy-inline.h, cong-editor-line-fragments.c, cong-editor-line-fragments.h, Makefile.am

	New files:  new implementation of text, to support inline blocks having underlines

2003-07-31  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-file-import.c, cong-menus.c, plugin-dtd.c

	Added some Bugzilla IDs

2003-07-31  Jeff Martin <jeff@custommonkey.org>

	* cong-dispspec.c

	Bug fixes in dispspec generation and loading

	* plugin-save-dispspec.c, cong-fake-plugin-hooks.h, main.c, Makefile.am

	Added plugin to extract dispspec as a dom tree and either save it
	straight to a file or open it as a CongDocument

2003-07-28  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-flow-holder-inlines.c

	Removed spurious include

	* cong-editor-area-flow-holder-blocks.c, cong-editor-area-flow-holder-inlines.c, cong-editor-area-flow-holder-single.c, cong-editor-area-flow-holder.c, cong-editor-area-flow-holder.h, cong-editor-widget3.c

	Use child_policy objects; editor widget no longer needs (or has) a 1-1 mapping between nodes and areas
	
	* cong-editor-child-policy-flow-holder.c, cong-editor-child-policy-flow-holder.h, cong-editor-child-policy.c, cong-editor-child-policy.h, Makefile.am

	New files: policy objects for managing the areas created for the children of an editor node

2003-07-27  David Malcolm <david@davemalcolm.demon.co.uk>
